[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "euxis-bridge"
version = "0.1.0"
description = "OpenClaw/ClawHub interoperability bridge for the Euxis runtime"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Euxis Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
euxis-bridge = "euxis_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/euxis_bridge"]

[tool.pytest.ini_options]
addopts = "-q --cov=euxis_bridge --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
pythonpath = ["src"]
