[package]
name = "euxis-crypto-lib-rs"
version = "0.0.1"
edition = "2021"
description = "Native Rust cryptography for Euxis"
license = "MIT"

[lib]
name = "crypto_lib_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
aes-gcm = "0.10.3"
sha2 = "0.10.8"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
