[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euxis-docs"
version = "0.0.1"
description = "Documentation and architecture decision records for Euxis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Sebastien Rousseau", email = "sebastian.rousseau@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "sphinx>=7.0.0",
    "furo>=2024.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "sphinx-autobuild",
    "sphinx-copybutton",
]

[project.urls]
Homepage = "https://euxis.co"
Documentation = "https://docs.euxis.co"
Repository = "https://github.com/euxis/euxis-docs"

[project.scripts]
euxis-docs-build = "sphinx.cmd.build:main"
