[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euxis-docs"
version = "0.0.3"
description = "Documentation and architecture decision records for Euxis"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [{name = "Sebastien Rousseau", email = "sebastian.rousseau@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "sphinx>=7.0.0",
    "furo>=2024.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
    "sphinx-autobuild",
    "sphinx-copybutton",
]

[project.urls]
Homepage = "https://euxis.co"
Documentation = "https://docs.euxis.co"
Repository = "https://github.com/euxis/euxis-docs"

[project.scripts]
euxis-docs-build = "sphinx.cmd.build:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=euxis_docs --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
source = ["src/euxis_docs"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
