[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euxis-gateway"
version = "0.1.0"
description = "WebSocket control plane and API for the Euxis Agent Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Sebastien Rousseau", email = "sebastian.rousseau@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "euxis-core>=0.1.0",
    "euxis-security>=0.1.0",
    "fastapi>=0.110.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "jsonschema>=4.21.0,<5.0.0",
    "referencing>=0.30.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "websockets>=12.0,<13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0", "black>=24.0.0"]

[project.urls]
Homepage = "https://euxis.co"
Repository = "https://github.com/euxis/euxis-gateway"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
