[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "euxis-gateway"
version = "0.0.2"
description = "High-performance API Gateway for the Euxis Agent Framework"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [{name = "Sebastien Rousseau", email = "sebastian.rousseau@gmail.com"}]
dependencies = [
    "euxis-core>=v0.0.2",
    "euxis-security>=v0.0.2",
    "fastapi>=0.110.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "jsonschema>=4.21.0,<5.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "websockets>=12.0,<13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0", "black>=24.0.0", "python-multipart"]

[project.scripts]
euxis-gateway = "gateway.demo:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*", "*/shared/*", "*/routers/auth.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise RuntimeError",
]
