[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "euxis-inference"
version = "0.1.0"
description = "Template package for strict Euxis package architecture"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Euxis" }]
dependencies = []

[project.optional-dependencies]
llama = ["llama-cpp-python>=0.2.0"]
ollama = ["httpx>=0.27.0"]
dev = [
  "pytest>=9.0",
  "pytest-cov>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/euxis_inference"]

[tool.pytest.ini_options]
addopts = "-q --cov=euxis_inference --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
pythonpath = ["src"]
