[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euxis-metrics"
version = "0.1.0"
description = "Observability and metrics tooling for the Euxis Agent Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Sebastien Rousseau", email = "sebastian.rousseau@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "euxis-core>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0", "black>=24.0.0"]

[project.scripts]
euxis-metrics = "metrics.metrics_cli:main"

[project.urls]
Homepage = "https://euxis.co"
Repository = "https://github.com/euxis/euxis-metrics"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=metrics --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
source = ["src/metrics"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
