[package]
name = "euxis-sdk"
version = "0.1.0"
edition = "2021"
description = "Euxis Rust SDK for building Wasm Agents with MCP support"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
extism-pdk = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3" # MessagePack serde implementation used by the SDK
thiserror = "2.0.18"

[features]
default = []
test-mocks = []
