[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "euxis-tui"
version = "0.0.2"
description = "Textual UI application for the Euxis Agent Framework"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [{name = "Sebastien Rousseau", email = "sebastian.rousseau@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "euxis-core>=v0.0.2",
    "rich>=14.3.0,<15.0.0",
    "textual>=7.5.0,<8.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0", "black>=24.0.0"]

[project.scripts]
euxis-tui = "tui:main"

[project.urls]
Homepage = "https://euxis.co"
Repository = "https://github.com/euxis/euxis-tui"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tui.euxis_tui_rs"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=tui --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src/tui"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*", "*/omnigraph.py", "*/dispatcher.py", "*/output_panel.py", "*/app.py", "*/services.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
